<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComentarioActivity">




    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="435dp"
        android:layout_height="223dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recurso"
        tools:ignore="ContentDescription,ImageContrastCheck,VisualLintBounds" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/nombre_Comentario"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/TipoReporte"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/pista_comentario"
        android:selectAllOnFocus="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Otro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0"        />

    <EditText
        android:id="@+id/Otro"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:hint="Otro"
        android:selectAllOnFocus="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TipoReporte"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0"/>



    <TextView
        android:id="@+id/title_Impacto"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:paddingStart="10dp"
        android:paddingTop="13dp"
        android:text="@string/nombre_impacto"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Impacto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TipoReporte"
        app:layout_constraintVertical_bias="0"
        tools:ignore="TextSizeCheck" />

    <Spinner
        android:id="@+id/Impacto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/pista_comentario"
        android:selectAllOnFocus="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_Impacto"
        app:layout_constraintTop_toBottomOf="@+id/TipoReporte"
        app:layout_constraintVertical_bias="0"/>


    <EditText
        android:id="@+id/tiempo"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:hint="@string/pista_comentario"
        android:selectAllOnFocus="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/Tipotiempo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_Impacto"
        app:layout_constraintVertical_bias="0"/>

    <Spinner
        android:id="@+id/Tipotiempo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/pista_comentario"
        android:selectAllOnFocus="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tiempo"
        app:layout_constraintTop_toBottomOf="@+id/title_Impacto"
        app:layout_constraintVertical_bias="0.0"/>

    <EditText
        android:id="@+id/Comentario_Direccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pista_registro_Dirección"
        android:imeOptions="actionDone"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/ubicacionbotton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiempo"
        app:layout_constraintVertical_bias="0.01"
        android:autofillHints=""/>

    <ImageView
        android:id="@+id/ubicacionbotton"
        android:layout_marginEnd="30dp"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:src="@drawable/ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Comentario_Direccion"
        app:layout_constraintTop_toBottomOf="@+id/tiempo"
        app:layout_constraintVertical_bias="0.01"/>

    <EditText
        android:id="@+id/Descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/pista_Descripcion"
        android:imeOptions="actionDone"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="150dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Comentario_Direccion"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/reportar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:enabled="true"
        android:text="@string/btn_comentar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Descripcion"
        app:layout_constraintVertical_bias="0.1"
        android:backgroundTint="@color/cardview_dark_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>